--- a/app/globals.css
+++ b/app/globals.css
@@ -71,3 +71,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+.yatra-one-regular {
+  font-family: "Yatra One", serif;
+  font-weight: 400;
+  font-style: normal;
+}
